Added package configs, updated lists and type checking